added pictures to projects and some formating

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     <a href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a href="contact">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="resume">Resume</a>
+                    <a href="#resume">Resume</a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/mcdougaldavid/">LinkedIn</a>
@@ -47,16 +47,9 @@
         <h3>
             William Ernext Henley
         </h3>
-         <u>
-            <li>Husband</li>
-            <li>Dreamer</li>
-            <li>Coder</li>
-            <li>Investor</li>
-            <li>Pilot</li>
-        </u>
     </mark>
     <!--About me-->
-    <section>
+    <section id="about-me">
         <h2 class="section-title">
             About Me
         </h2>
@@ -73,6 +66,9 @@
         
         <div class="past-projects">
             <article class="project">
+                <a href="#" target="_blank">
+                    <img src="./assets/images/run-buddy.PNG" alt="Snapshot of the Run Buddy webpage with a yellow header and contact form with a women tying her shoe in the background."/>
+                </a>
                 <div>
                     <h2>Run Buddy</h2>
                     <p> Created a functioning mobile website using HTML and CSS. Uses forms and flexboxes to provide an advanced user experiance.
@@ -82,6 +78,9 @@
             </article>
             <!--first website-->
             <article class="project">
+                <a href="#" target="_blank">
+                    <img src="./assets/images/website-one.PNG" alt="first website built by David McDougal, with his hame picture and links to BYU and info about him."/>
+                </a>
                 <div>
                     <h3>David M. Website 1.0</h3>
                     <p>
@@ -90,16 +89,21 @@
                 </div>
             </article>
 
-            <!--Condesing and improving-->
+            <!--Condensing and improving-->
             <article class="project">
+                <img src="./assets/images/horiseon.PNG" alt="Snapshot of webpage that features a group of people around a marketing table with the title of the Webpage at the top."/>
                 <div>
                     <h3>Horison Marketing</h3>
-                    <p>In this project I was assigned the task of going through existing code and refractoring it to make it more concise</p>
+                    <p>In this project I was assigned the task of going through existing code and refactoring it to make it more concise</p>
                 </div>
             </article>
 
             <!--Robot Gladiators-->
             <article class="project">
+                <!--Img from https://www.freeimages.com/photo/contact-2-1533650-->
+                <a href="#" target="_blank">
+                    <img src="./assets/images/robot.jpg" alt="Robot and monkey with arms extended toward each other as if they are about to fight."/>
+                </a>
                 <div>
                     <h3>Robot Gladiators</h3>
                     <p>Using JavaScript I created an interactive game where a player could fight multipule different robots and earn money through different rounds of play.</p>
@@ -108,16 +112,20 @@
 
             <!--Additonal Projects-->
             <article class="project">
+                <!--Img from https://www.freeimages.com/photo/keyboard-1573055-->
+                <a href="#" target="_blank">
+                    <img src="./assets/images/future.jpg" alt="Keyboard with wispy blue light surrounding it as if the keyboard is speeding off into the future."/>
+                </a>
                 <div>
-                    <h3>Additonal Projects To Come</h3>
-                    <p>As time goes on and I continue to gain more experiance I will add new projects here as they are completed.</p>
+                    <h3>Additional Projects To Come</h3>
+                    <p>As time goes on and I continue to gain more experience I will add new projects here as they are completed.</p>
                 </div>
             </article>
         </div>
     </section>
 
     <!--Contact me-->
-    <section>
+    <section id="contact">
         <h2 class="section-title">
             Contact Me
         </h2>
