--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>
             <a href="/">
-                David McDougal Portfolio
+                David McDougal 
             </a>
         </h1>
         <nav>
@@ -35,21 +35,25 @@
                 <li>
                     <a href="https://www.linkedin.com/in/mcdougaldavid/">LinkedIn</a>
                 </li>
+                <li>
+                    <a href="https://github.com/davsav16">GitHub</a>
+
+                </li>
             </ul>
         </nav>
     </header>
 
     <!--Intro-->
-    <mark>
-        <h2>
-            I am the master of my Fate: I am the capitan of my soul.
+    <section >
+        <h2 class="intro">
+            I am the master of my Fate: I am the captain of my soul.
         </h2>
-        <h3>
+        <h3 class="intro">
             William Ernext Henley
         </h3>
-    </mark>
+    </section>
     <!--About me-->
-    <section id="about-me">
+    <section id="about-me" class=flex-left >
         <h2 class="section-title">
             About Me
         </h2>
@@ -57,7 +61,7 @@
     </section>
 
     <!--Projects-->
-    <section id="projects">
+    <section id="projects"class="flex-left">
         <div class="flex-row">
             <h2 class="section-title">
                 Past Projects
@@ -66,19 +70,18 @@
         
         <div class="past-projects">
             <article class="project">
-                <a href="#" target="_blank">
+                <a href="https://davsav16.github.io/run-buddy/" target="_blank">
                     <img src="./assets/images/run-buddy.PNG" alt="Snapshot of the Run Buddy webpage with a yellow header and contact form with a women tying her shoe in the background."/>
                 </a>
                 <div>
                     <h2>Run Buddy</h2>
                     <p> Created a functioning mobile website using HTML and CSS. Uses forms and flexboxes to provide an advanced user experiance.
-
                     </p>
                 </div>
             </article>
             <!--first website-->
             <article class="project">
-                <a href="#" target="_blank">
+                <a href="https://davandsav.com/" target="_blank">
                     <img src="./assets/images/website-one.PNG" alt="first website built by David McDougal, with his hame picture and links to BYU and info about him."/>
                 </a>
                 <div>
@@ -91,7 +94,9 @@
 
             <!--Condensing and improving-->
             <article class="project">
-                <img src="./assets/images/horiseon.PNG" alt="Snapshot of webpage that features a group of people around a marketing table with the title of the Webpage at the top."/>
+                <a href="https://davsav16.github.io/Horsieon-Marketing/" target="_blank">
+                    <img src="./assets/images/horiseon.PNG" alt="Snapshot of webpage that features a group of people around a marketing table with the title of the Webpage at the top."/>
+                </a>
                 <div>
                     <h3>Horison Marketing</h3>
                     <p>In this project I was assigned the task of going through existing code and refactoring it to make it more concise</p>
@@ -101,7 +106,7 @@
             <!--Robot Gladiators-->
             <article class="project">
                 <!--Img from https://www.freeimages.com/photo/contact-2-1533650-->
-                <a href="#" target="_blank">
+                <a href=" https://davsav16.github.io/robot-gladiators" target="_blank">
                     <img src="./assets/images/robot.jpg" alt="Robot and monkey with arms extended toward each other as if they are about to fight."/>
                 </a>
                 <div>
@@ -113,7 +118,7 @@
             <!--Additonal Projects-->
             <article class="project">
                 <!--Img from https://www.freeimages.com/photo/keyboard-1573055-->
-                <a href="#" target="_blank">
+                <a href="" target="_blank">
                     <img src="./assets/images/future.jpg" alt="Keyboard with wispy blue light surrounding it as if the keyboard is speeding off into the future."/>
                 </a>
                 <div>
@@ -125,7 +130,7 @@
     </section>
 
     <!--Contact me-->
-    <section id="contact">
+    <section class="flex-left" id="contact">
         <h2 class="section-title">
             Contact Me
         </h2>
@@ -134,7 +139,7 @@
             <ul class="contact">
                 <li>Phone: 385.288.7920</li>
                 <li>Email: <a href="mailto:davidbyu6@gmail.com">davidbyu6@gmail.com</a></li>
-                <li>LinkedIn <a href="https://www.linkedin.com/in/mcdougaldavid/">Message me on LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/mcdougaldavid/">Message me on LinkedIn</a></li>
             </ul>
         </address>
     </section>
