added additonal css and made site more mobile friendly

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                     <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="#resume">Resume</a>
+                    <a href="./assets/David resume 2.0.pdf" target="_blank">Resume</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/mcdougaldavid/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/mcdougaldavid/" target="_blank">LinkedIn</a>
                 </li>
                 <li>
-                    <a href="https://github.com/davsav16">GitHub</a>
+                    <a href="https://github.com/davsav16" target="_blank">GitHub</a>
 
                 </li>
             </ul>
@@ -44,11 +44,11 @@
     </header>
 
     <!--Intro-->
-    <section >
-        <h2 class="intro">
+    <section class="intro">
+        <h2>
             I am the master of my Fate: I am the captain of my soul.
         </h2>
-        <h3 class="intro">
+        <h3>
             William Ernext Henley
         </h3>
     </section>
@@ -58,6 +58,9 @@
             <h2 class="section-title">
                 About Me
             </h2>
+        </div>
+        <div class="my-pic">
+            <img src="./assets/images/picture.png" alt="David McDougal looking into the camera with a green shirt"/>
         </div>
         <div class="about-me-text"> 
             <p>
@@ -70,7 +73,8 @@
     <section id="projects">
         <div class="past-projects-title">
             <h2 class="section-title">
-                Past Projects
+                Past <br/>
+                Projects
             </h2>
         </div>
         
@@ -143,14 +147,16 @@
 
     <!--Contact me-->
     <section  id="contact">
-        <h2 class="about-me-title">
-            Contact Me
-        </h2>
+        <div class="about-me-title">
+            <h2>
+                Contact Me
+            </h2>
+        </div>
         <!--email, phone, linkedin-->
         <div class="contact-info">
                 <ul>
                     <li>Phone: 385.288.7920</li>
-                    <li>Email: <a href="mailto:davidbyu6@gmail.com">davidbyu6@gmail.com</a></li>
+                    <li><a href="mailto:davidbyu6@gmail.com">Email: davidbyu6@gmail.com</a></li>
                     <li><a href="https://www.linkedin.com/in/mcdougaldavid/">Message me on LinkedIn</a></li>
                 </ul>
         </div>
