final adjustments to make site mobile friendly

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
         <!--email, phone, linkedin-->
         <div class="contact-info">
                 <ul>
-                    <li>Phone: 385.288.7920</li>
+                    <li><a>Phone: 385.288.7920</a></li>
                     <li><a href="mailto:davidbyu6@gmail.com">Email: davidbyu6@gmail.com</a></li>
-                    <li><a href="https://www.linkedin.com/in/mcdougaldavid/">Message me on LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/mcdougaldavid/">LinkedIn</a></li>
                 </ul>
         </div>
     </section>
