added new website to portfolio

--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
         
         <div class="past-projects">
             <article class="project">
-                <a href="https://davsav16.github.io/run-buddy/" target="_blank">
-                    <img src="./assets/images/run-buddy.PNG" alt="Snapshot of the Run Buddy webpage with a yellow header and contact form with a women tying her shoe in the background."/>
+                <a href="https://yana-mkr.github.io/board-games-6/" target="_blank">
+                    <img src="./assets/images/board-games-6 pic.PNG" alt="Board Game search webiste displaying a game search result."/>
                 </a>
                 <div class="project-info">
-                    <h2>Run Buddy</h2>
-                    <p> HTML and CSS
-                    </p>
+                    <h3>Board Game Search</h3>
+                    <p>HTML, CSS, JavaScript, API, Local Storage</p>
                 </div>
             </article>
 
@@ -139,11 +138,12 @@
                     <!--Additonal Projects-->
                     <article class="project">
                         <!--Img from https://www.freeimages.com/photo/keyboard-1573055-->
-                        <a href="" target="_blank">
-                            <img src="./assets/images/future.jpg" alt="Keyboard with wispy blue light surrounding it as if the keyboard is speeding off into the future."/>
+                        <a href="https://davsav16.github.io/run-buddy/" target="_blank">
+                            <img src="./assets/images/run-buddy.PNG" alt="Snapshot of the Run Buddy webpage with a yellow header and contact form with a women tying her shoe in the background."/>
                         </a>
                         <div class="pjtext"> 
-                            <h3>Additional Projects To Come!</h3>
+                            <h2>Run Buddy</h2>
+                            <p> HTML and CSS</p>
                         </div>
                     </article>
                 </div>
