--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>David M. Portfolio</title>
     <link rel="stylesheet" href=""/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -70,7 +71,7 @@
                 <br>
                 After graduating from Brigham Young University, I decided to make a change and study software engineering by attending a 6-month bootcamp offered by the University of Utah. I have always enjoyed creating and designing and I discovered that web development could be an exciting career to get into that would allow me to create and use my other skills to better the lives of others and provide a good life for my family. </br>
                 <br>
-                Feel free to reaching out to me about career opportunities or just connecting on LinkedIn!  
+                Feel free to reaching out to me about career opportunities or just connect on LinkedIn!  
             </p>
         </div>  
     </section>
@@ -85,68 +86,101 @@
         </div>
         
         <div class="past-projects">
-            <article class="project">
-                <a href="https://yana-mkr.github.io/board-games-6/" target="_blank">
-                    <img src="./assets/images/board-games-6 pic.PNG" alt="Board Game search webiste displaying a game search result."/>
-                </a>
-                <div class="project-info">
-                    <h3>Board Game Search</h3>
-                    <p>HTML, CSS, JavaScript, API, Local Storage</p>
+
+            <div class="card project">
+                <div class="card-body">
+                    <h5 class="card-title">Board Game Search</h5>
+                    <p class="card-text">Built using: HTML, CSS, JavaScript, API, Local Storage</p>
+                    <img src="./assets/images/board-games-6 pic.PNG" class="card-img-middle" alt="Board Game search webiste displaying a game search result.">
+                    <div class="btnsM">
+                        <a class="btn btn-primary" href="https://yana-mkr.github.io/board-games-6/" target="_blank">See it Live</a>
+                        <a class="btn btn-primary" href="https://github.com/davsav16/davidmportfolio" target="_blank">View Code</a>
+                    </div>
                 </div>
-            </article>
+              </div>
 
             <div class="projects-small">
                 <div class="projects-smaller">
-                    <!--first website-->
-                    <article class="project">
-                        <a href="https://davandsav.com/" target="_blank">
-                            <img src="./assets/images/website-one.PNG" alt="first website built by David McDougal, with his hame picture and links to BYU and info about him."/>
-                        </a>
-                        <div class="pjtext">
-                            <h3 class="pjtext-title">David M. Website 1.0</h3>
-                            <p>
-                                HTML and CSS
-                            </p>
+
+                    <div class="card project">
+                        <div class="card-body">
+                            <h5 class="card-title">David M. Website 1.0</h5>
+                            <p class="card-text">Built using: HTML and CSS</p>
+                            <img src="./assets/images/website-one.PNG" class="card-img-top" alt="first website built by David McDougal, with his hame picture and links to BYU and info about him.">
+                            <div class="btnsM">
+                                <a class="btn btn-primary" href="https://davandsav.com/" target="_blank">See it Live</a>
+                                <!-- <a href="https://github.com/davsav16/davidmportfolio" target="_blank">View Code</a> -->
+                            </div>
                         </div>
-                    </article>
+                      </div>
 
                     <!--Condensing and improving-->
-                    <article class="project">
-                        <a href="https://davsav16.github.io/Horsieon-Marketing/" target="_blank">
-                            <img src="./assets/images/horiseon.PNG" alt="Snapshot of webpage that features a group of people around a marketing table with the title of the Webpage at the top."/>
-                        </a>
-                        <div class="pjtext">
-                            <h3>Horison Marketing</h3>
-                            <p>Refactoring HTML and CSS</p>
+                    <div class="card project">
+                        <div class="card-body">
+                            <h5 class="card-title">Horison Marketing</h5>
+                            <p class="card-text">Refactoring HTML and CSS</p>
+                            <img src="./assets/images/horiseon.PNG" class="card-img-top" alt="Snapshot of webpage that features a group of people around a marketing table with the title of the Webpage at the top.">
+                            <div class="btnsM">
+                                <a class="btn btn-primary" href="https://davsav16.github.io/Horsieon-Marketing/" target="_blank">See it Live</a>
+                                <a class="btn btn-primary" href="https://github.com/davsav16/Horsieon-Marketing" target="_blank">View Code</a>
+                            </div>
                         </div>
-                    </article>
+                    </div>
                 </div>
 
                 <div class="projects-smaller">
                     <!--Robot Gladiators-->
-                    <article class="project">
-                        <!--Img from https://www.freeimages.com/photo/contact-2-1533650-->
-                        <a href=" https://davsav16.github.io/robot-gladiators" target="_blank">
-                            <img src="./assets/images/robot.jpg" alt="Robot and monkey with arms extended toward each other as if they are about to fight."/>
-                        </a>
-                        <div class="pjtext">
-                            <h3>Robot Gladiators</h3>
-                            <p>JavaScript and HTML</p>
+                    <div class="card project">
+                        <div class="card-body">
+                            <h5 class="card-title">Robot Gladiators</h5>
+                            <p class="card-text">Built Using: JavaScript and HTML</p>
+                            <img src="./assets/images/robot.jpg" class="card-img-top" alt="Robot and monkey with arms extended toward each other as if they are about to fight.">
+                            <div class="btnsM">
+                                <a class="btn btn-primary" href="https://davsav16.github.io/robot-gladiators" target="_blank">See it Live</a>
+                                <a class="btn btn-primary" href="https://github.com/davsav16/robot-gladiators" target="_blank">View Code</a>
+                            </div>
                         </div>
-                    </article>
+                    </div>
 
                     <!--Additonal Projects-->
-                    <article class="project">
-                        <!--Img from https://www.freeimages.com/photo/keyboard-1573055-->
-                        <a href="https://davsav16.github.io/run-buddy/" target="_blank">
-                            <img src="./assets/images/run-buddy.PNG" alt="Snapshot of the Run Buddy webpage with a yellow header and contact form with a women tying her shoe in the background."/>
-                        </a>
-                        <div class="pjtext"> 
-                            <h2>Run Buddy</h2>
-                            <p> HTML and CSS</p>
+                    <div class="card project">
+                        <div class="card-body">
+                            <h5 class="card-title">Run Buddy</h5>
+                            <p class="card-text">Built Using: HTML and CSS</p>
+                            <img src="./assets/images/run-buddy.PNG" class="card-img-top" alt="Snapshot of the Run Buddy webpage with a yellow header and contact form with a women tying her shoe in the background.">
+                            <div class="btnsM">
+                                <a class="btn btn-primary" href="https://davsav16.github.io/run-buddy/" target="_blank">See it Live</a>
+                                <a class="btn btn-primary" href="https://github.com/davsav16/run-buddy" target="_blank">View Code</a>
+                            </div>
                         </div>
-                    </article>
+                    </div>
                 </div>
+
+                <!-- <div class="projects-smaller">
+                    <div class="card project">
+                        <div class="card-body">
+                            <h5 class="card-title">Title</h5>
+                            <p class="card-text">Built Using: </p>
+                            <img src="img" class="card-img-top" alt="Description of Imge">
+                            <div class="btnsM">
+                                <a href="depoyed website" target="_blank">See it Live</a>
+                                <a href="code" target="_blank">View Code</a>
+                            </div>
+                        </div>
+                    </div>
+                      <div class="card project">
+                        <div class="card-body">
+                            <h5 class="card-title">Title</h5>
+                            <p class="card-text">Built Using: </p>
+                            <img src="img" class="card-img-top" alt="Description of Imge">
+                            <div class="btnsM">
+                                <a href="depoyed website" target="_blank">See it Live</a>
+                                <a href="code" target="_blank">View Code</a>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+
             </div>
         </div>
     </section>
