--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
 
                     <div class="card project">
                         <div class="card-body">
-                            <h5 class="card-title">David M. Website 1.0</h5>
-                            <p class="card-text">Built using: HTML and CSS</p>
-                            <img src="./assets/images/website-one.PNG" class="card-img-top" alt="first website built by David McDougal, with his hame picture and links to BYU and info about him.">
+                            <h5 class="card-title">SOUNDEMIC</h5>
+                            <p class="card-text">Built using: Handlbars, JavaScript, CSS, Express, and more.</p>
+                            <img src="./assets/images/Sound Demic.PNG" class="card-img-top" alt="first website built by David McDougal, with his hame picture and links to BYU and info about him.">
                             <div class="btnsM">
-                                <a class="btn btn-primary" href="https://davandsav.com/" target="_blank">See it Live</a>
-                                <!-- <a href="https://github.com/davsav16/davidmportfolio" target="_blank">View Code</a> -->
+                                <a class="btn btn-primary" href="https://soundemic.herokuapp.com/" target="_blank">See it Live</a>
+                                <a class="btn btn-primary" href="https://github.com/davsav16/music-selector" target="_blank">View Code</a>
                             </div>
                         </div>
                       </div>
