added skills section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <a href="#about-me">About Me</a>
                 </li>
                 <li>
+                    <a href="#skills">Skills</a>
+                </li>
+                <li>
                     <a href="#projects">Projects</a>
                 </li>
                 <li>
@@ -74,6 +77,36 @@
                 Feel free to reaching out to me about career opportunities or just connect on LinkedIn!  
             </p>
         </div>  
+    </section>
+
+    <!--Skills-->
+    <section id="skills">
+        <div class="past-projects-title">
+            <h2 class="section-title">
+                Skills
+            </h2>
+        </div>
+
+        <div class="Slist">
+            <ul class="skillList">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Restful APIs</li>
+                <li>MongoDB</li>
+                <li>Express</li>
+                <li>Mongoose</li>
+            </ul>
+            <ul class="skillList">
+                <li>SQL</li>
+                <li>Jest</li>
+                <li>Cookies</li>
+                <li>Sequelize</li>
+                <li>Object Oriented Programming</li>
+                <li>Authentication</li>
+            </ul>
+
+        </div>
     </section>
 
     <!--Projects-->
