--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Board Game Search</h5>
                     <p class="card-text">Built using: HTML, CSS, JavaScript, API, Local Storage</p>
+                    <p class="card-text">Description: Built this app in a group project to allow users to search for a new board game. I focused primarily on the HTML and CSS. </p>
                     <img src="./assets/images/board-games-6 pic.PNG" class="card-img-middle" alt="Board Game search webiste displaying a game search result.">
                     <div class="btnsM">
                         <a class="btn btn-primary" href="https://yana-mkr.github.io/board-games-6/" target="_blank">See it Live</a>
@@ -165,8 +166,9 @@
                     <div class="card project">
                         <div class="card-body">
                             <h5 class="card-title">SOUNDEMIC</h5>
-                            <p class="card-text">Built using: Handlbars, JavaScript, CSS, Express, and more.</p>
-                            <img src="./assets/images/Sound Demic.PNG" class="card-img-top" alt="first website built by David McDougal, with his hame picture and links to BYU and info about him.">
+                            <p class="card-text">Built using: Handlbars, JavaScript, CSS, Express, and SQL</p>
+                            <p class="card-text">Developed this app in a group project for users to post about their favorite music and engage in conversation about it. Focused on the file structure and the backend.</p>
+                            <img src="./assets/images/Sound Demic.PNG" class="card-img-top" alt="Login page to a colorful sound social media website">
                             <div class="btnsM">
                                 <a class="btn btn-primary" href="https://soundemic.herokuapp.com/" target="_blank">See it Live</a>
                                 <a class="btn btn-primary" href="https://github.com/davsav16/music-selector" target="_blank">View Code</a>
@@ -177,12 +179,13 @@
                     <!--Condensing and improving-->
                     <div class="card project">
                         <div class="card-body">
-                            <h5 class="card-title">Horison Marketing</h5>
-                            <p class="card-text">Refactoring HTML and CSS</p>
-                            <img src="./assets/images/horiseon.PNG" class="card-img-top" alt="Snapshot of webpage that features a group of people around a marketing table with the title of the Webpage at the top.">
+                            <h5 class="card-title">Tech Blog For Nerds</h5>
+                            <p class="card-text">Built Using: JavaScript, Handlbars, CSS, Jest, Cookies, Sequelize, and OOP</p>
+                            <p class="card-text">This was a personal app that I created where users could login, add posts, about different Tech issues in the world and then engage in conversations with other users.</p>
+                            <img src="./assets/images/tech-blog.png" class="card-img-top" alt="Snapshot of a news blog that features many different kinds of posts from different users about tech topics.">
                             <div class="btnsM">
-                                <a class="btn btn-primary" href="https://davsav16.github.io/Horsieon-Marketing/" target="_blank">See it Live</a>
-                                <a class="btn btn-primary" href="https://github.com/davsav16/Horsieon-Marketing" target="_blank">View Code</a>
+                                <a class="btn btn-primary" href="https://afternoon-castle-80416.herokuapp.com/" target="_blank">See it Live</a>
+                                <a class="btn btn-primary" href="https://github.com/davsav16/Tech-Blog-For-Nerds" target="_blank">View Code</a>
                             </div>
                         </div>
                     </div>
@@ -192,12 +195,13 @@
                     <!--Robot Gladiators-->
                     <div class="card project">
                         <div class="card-body">
-                            <h5 class="card-title">Robot Gladiators</h5>
-                            <p class="card-text">Built Using: JavaScript and HTML</p>
-                            <img src="./assets/images/robot.jpg" class="card-img-top" alt="Robot and monkey with arms extended toward each other as if they are about to fight.">
+                            <h5 class="card-title">Employee Tracker</h5>
+                            <p class="card-text">Built Using: JavaScript, Node.js, MySQL, and inquirer</p>
+                            <p class="card-text">Developed this app myself to be used by management to create and update employee roles, departments and roles in a company. If you would like to use this, please clone the code to your local device, navigate to the code and then install Node, Inquierer, and MySQL.</p>
+                            <img src="./assets/images/manager.jpg" class="card-img-top" alt="Manager and Employee give each other a high 5.">
                             <div class="btnsM">
-                                <a class="btn btn-primary" href="https://davsav16.github.io/robot-gladiators" target="_blank">See it Live</a>
-                                <a class="btn btn-primary" href="https://github.com/davsav16/robot-gladiators" target="_blank">View Code</a>
+                                <a class="btn btn-primary" href="https://www.youtube.com/watch?v=ry8LXPNdpKc" target="_blank">See it Live</a>
+                                <a class="btn btn-primary" href="https://github.com/davsav16/Management-Employee-Tracker" target="_blank">View Code</a>
                             </div>
                         </div>
                     </div>
