Updated the projects

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <img src="./assets/images/board-games-6 pic.PNG" class="card-img-middle" alt="Board Game search webiste displaying a game search result.">
                     <div class="btnsM">
                         <a class="btn btn-primary" href="https://yana-mkr.github.io/board-games-6/" target="_blank">See it Live</a>
-                        <a class="btn btn-primary" href="https://github.com/davsav16/davidmportfolio" target="_blank">View Code</a>
+                        <a class="btn btn-primary" href="https://github.com/davsav16/board-games-6" target="_blank">View Code</a>
                     </div>
                 </div>
               </div>
@@ -209,12 +209,16 @@
                     <!--Additonal Projects-->
                     <div class="card project">
                         <div class="card-body">
-                            <h5 class="card-title">Run Buddy</h5>
-                            <p class="card-text">Built Using: HTML and CSS</p>
-                            <img src="./assets/images/run-buddy.PNG" class="card-img-top" alt="Snapshot of the Run Buddy webpage with a yellow header and contact form with a women tying her shoe in the background.">
+                            <h5 class="card-title">Zoo Keeper</h5>
+                            <p class="card-text">Built Using: HTML, CSS, Jest, JavaScript, Express, and Node</p>
+                            <p class="card-text">Personal Project that I completed that would allow users to search for and find different animals and zookeepers at a zoo.</p>
+                            <br>
+                            <br>
+                            <br>
+                            <img src="./assets/images/zookeeper.png" class="card-img-top" alt="Snapshot of the frontend of a website where a user can add animals to the zoo and then find all animals and zookeepers.">
                             <div class="btnsM">
-                                <a class="btn btn-primary" href="https://davsav16.github.io/run-buddy/" target="_blank">See it Live</a>
-                                <a class="btn btn-primary" href="https://github.com/davsav16/run-buddy" target="_blank">View Code</a>
+                                <a class="btn btn-primary" href="https://whispering-ocean-07735.herokuapp.com/" target="_blank">See it Live</a>
+                                <a class="btn btn-primary" href="https://github.com/davsav16/zookeeper" target="_blank">View Code</a>
                             </div>
                         </div>
                     </div>
